# vic-palacinke

./: .gitattributes  .gitignore  HDISP.md  MeWP specifikacija.md  README.md  Vezave.txt  constant.h  grelci.ino  komunikacija.md  library_list.md  library_list.txt  masa.ino  palačinka.fzz  serial_protokol.txt  times.ino  trak.ino  vic-palacinke.ino
Arduino_C_things/: Arduino_C_things.ino  Arduino_C_things.ino.mega.hex  Arduino_C_things.ino.with_bootloader.mega.hex  CMakeLists.txt  Commmunication.h  Communication.ino  communication.ino  constant.h  constant.ino  error.h  grelci.ino  grelci_in_temperatura.c  infrared.ino  logging.h  logging.ino  masa.h  masa.ino  pancake_count.ino  readme.md  servo.ino  times  times.ino  trak.ino  zvijanje.ino
Arduino_C_things/communication/: a.out  communication.c  communication.h  communication.ino
Arduino_C_things/control/: main.c  palacinka_controller.ino
Arduino_C_things/lib/: dummy.c
Arduino_C_things/main/: main.c
Arduino_C_things/temp/temp/temp.ino/: temp.ino.ino
Arduino_C_things/tests/: comm.in  comm_test.c  comm_test.h  neki za popucat.d
Arduino_C_things/tests/komunikacija/: komunikacija.ino
Palačinka Pi (java stuff)/: README.TXT
Pi_java_stuff/: Selection.properties  readme.md
Pi_java_stuff/runtimeDir/: Selection.properties
Testni-Control-Panel/: Testni-Control-Panel.ino  grelci.ino  lcd.ino
attiny_stuff/: attiny_program.ino  attiny_stuff.ino
infrared_test/: infrared_test.ino
lcd_test/: README.md  lcd_test.ino  snake.ino
nacrt/: README.md  vezave.pseudoC  vezave.txt
snake/: README.md  snake.ino
(+38 files in other folders)
